tests/baselines/reference/jsxParsingError4(strict=true).errors.txt
tests/cases/conformance/jsx/a.tsx(13,4): error TS1212: Identifier expected. 'public' is a reserved word in strict mode.
tests/cases/conformance/jsx/a.tsx(13,13): error TS1212: Identifier expected. 'public' is a reserved word in strict mode.


==== tests/cases/conformance/jsx/a.tsx (2 errors) ====
    declare const React: any
    declare namespace JSX {
        interface IntrinsicElements {
            [k: string]: any
        }
    }
    
    const a = (
      <public-foo></public-foo>
    );
    
    const b = (
      <public></public>
       ~~~~~~
!!! error TS1212: Identifier expected. 'public' is a reserved word in strict mode.
                ~~~~~~
!!! error TS1212: Identifier expected. 'public' is a reserved word in strict mode.
    );
    